--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "globals": "^16.3.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "wrangler": "^4.26.0"
   }
 }
